--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -275,6 +275,7 @@
                             <li> <a href="javascript:void(0)"><i class="fa fa-list-alt"></i><span class="hide-menu"> จัดการข้อมูลสินค้า</span></a> </li>
                             <li> <a href="javascript:void(0)"><i class="fa fa-map-marker"></i><span class="hide-menu"> ระบบติดตามพนักงาน</span></a> </li>
                             <li> <a href="../Setting/ListZone"><i class="fa fa-list-alt"></i><span class="hide-menu"> กำหนดพื้นที่ทำงาน</span></a> </li>
+                            <li> <a href="../Setting/ListStaffRole"><i class="fa fa-list-alt"></i><span class="hide-menu"> กำหนดกลุ่มพนักงาน</span></a> </li>
                         </ul>
                     </li>
                 </ul>
