--- a/TheGreatGroupModules/Views/Staffs/ListStaffRole.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/ListStaffRole.cshtml
@@ -19,9 +19,23 @@
     <div class="col-lg-12 ">
 
         <div class="white-box">
+            <a onclick="Show_PopupAdd()" class="btn btn-info pull-right"><i class="fa fa-plus"></i> เพิ่มกลุ่มพนักงาน</a>
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-search"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <hr>
+
+            <!-- ใส่ Grid-->
+            <div id="gridListStaffRole" style="vertical-align: middle;"></div>
+            <div id="modalAddEditStaffRole"></div>
 
 
 
-        </div>
+
+        </div>  
     </div>
 </div>
+
+
+@section Scripts {
+    @Scripts.Render("../Scripts/src/manage_staff_role.js")
+
+}
