--- a/TheGreatGroupModules/Views/ManagePayment/CustomerHistory.cshtml
+++ b/TheGreatGroupModules/Views/ManagePayment/CustomerHistory.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "ข้อมูลลูกค้าใหม่";
-    ViewBag.MainMenu = "ระบบจัดการข้อมูลลูกค้า";
+    ViewBag.Title = "ประวัติการชำระค่างวดตามรายชื่อสมาชิก";
+    ViewBag.MainMenu = "ระบบจัดการค่างวด";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
 <div class="row bg-title">
@@ -12,7 +12,8 @@
         </ol>
     </div>
 
-    <a href="javascript:history.back();" class="btn btn-default pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
+    <a href="javascript:history.back();" class="btn btn-default pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light">
+    <i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
 
 </div>
 <div class="row">
@@ -20,7 +21,11 @@
     <div class="col-lg-12 ">
 
         <div class="white-box">
+       
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-file-text-o"></i> @ViewBag.Title</h3> 
+            <small class="text-muted db"></small>
 
+            <hr>
         </div>
     </div>
 </div>
