--- a/TheGreatGroupModules/Views/Customers/ListContract.cshtml
+++ b/TheGreatGroupModules/Views/Customers/ListContract.cshtml
@@ -230,8 +230,8 @@
           
         });
         function NewContract() {
-
-            window.location = "\PurchaseOrder?CustomerID=" + getUrlParameter('CustomerID');
+            window.location = "\Contract?CustomerID=" + getUrlParameter('CustomerID') + "&ContractID=0";
+         
         }
     </script>
 }
