staffzone api setting

--- a/TheGreatGroupModules/Views/Report/OpenCloseAccountReport.cshtml
+++ b/TheGreatGroupModules/Views/Report/OpenCloseAccountReport.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "รายชื่อพนักงานทั้งหมด";
-    ViewBag.MainMenu = "ระบบจัดการพนักงาน";
+    ViewBag.MainMenu = "รายงานการเปิดบัญชี";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
 
