--- a/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LayoutPartial.cshtml
@@ -255,9 +255,11 @@
                             <i data-icon="/" class="fa fa-bar-chart-o"></i><span class="hide-menu"> 
                                 รายงาน<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
-                                    <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานยอดเก็บประจำวันเดือนปีและช่วงเวลา</span></a> </li>
+
+                                    <li> <a href="../Staffs/OpenCloseAccountReport"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานการเปิดบัญชี</span></a> </li>
+                                    <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานการปิดบัญชี</span></a> </li>
                                     <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานยอดเปิดออเดอร์ลูกค้า และยอดปิดบัญชี</span></a> </li>
-                                    <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานยอดเปิดและยอดปิดตามรายชื่อลูกค้า</span></a> </li>
+                                    <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานยอดเก็บประจำวันเดือนปีและช่วงเวลา</span></a> </li>
                                     <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานต้นทุนกำไร</span></a> </li>
                                     <li> <a href="javascript:void(0)"><i class=" fa  fa-line-chart"></i><span class="hide-menu"> รายงานการเก็บเงินตามพนักงาน</span></a> </li>
                                 </ul>
