--- a/TheGreatGroupModules/Views/Setting/ManageStaffZone.cshtml
+++ b/TheGreatGroupModules/Views/Setting/ManageStaffZone.cshtml
@@ -14,9 +14,11 @@
         </ol>
     </div>
 
+<!--
     <a href="javascript:history.back();" class="btn btn-default pull-right m-l-20 hidden-xs hidden-sm waves-effect waves-light">
         <i class="fa fa-mail-reply"></i> ย้อนกลับ
     </a>
+-->
 
 </div>
 <div class="row">
@@ -26,9 +28,179 @@
         <div class="white-box">
 
             <h3 class="m-b-0 m-t-0"> <i class="fa fa-file-text-o"></i> @ViewBag.Title</h3>
-            <small class="text-muted db"></small>
-
             <hr>
+
+            <form class="form-horizontal">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-3 control-label">สาย : </label>
+                            <label for="inputEmail3" class="col-sm-2 fa-pull-left control-label" id="zoneId"></label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="inputEmail3" class="col-sm-3 control-label">เลือกพนักงาน  : </label>
+                            <div class="col-sm-4">
+                                <select class="form-control select2" id="CustomerID">
+                                    <option value> === เลือกพนักงาน === </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <div id="loadIndicator"></div> <button type="button" id="btnSearch" class="btn btn-info waves-effect waves-light m-r-10" onclick="SearchCustomer()">
+                            <!-- <i class="fa fa-search"></i> -->   เพิ่มพนักงาน
+                        </button>
+                    </div>
+                </div>
+
+            </form>
+            <div id="gridContainer"></div>
+            <div id="toast"></div>
+
+
         </div>
     </div>
 </div>
+
+@section Scripts {
+
+@Scripts.Render("../Scripts/src/manage_staff_zone.js")
+    
+    <script>
+
+        $(function () {
+            $.fn.datepicker.defaults.language = 'th';
+
+            SearchCustomer();
+            $.get("../Staffs/GetZone")
+                .done(function (data) {
+                    if (data.success == true) {
+
+                        $.each(data.data, function (key, value) {
+                            if (value.ID == getUrlParameter('zoneId'))
+                                $("#zoneId").html(value.Value);
+                        });
+                    }
+                });
+
+//              $.get("../Staffs/GetStaffs?staffroleid=5&zoneId=" + getUrlParameter('zoneId'))
+                $.get("../Staffs/GetStaffs?staffroleid=5&zoneId=0")
+                .done(function (data) {
+                    console.log(data);
+                    if (data.success == true) {
+
+                        $.each(data.data, function (key, value) {
+                            $("#CustomerID").append('<option value="' + value.ID + '"' + ">" + value.Value + "</option>");
+                        });
+                    }
+                });
+
+         
+
+
+        })
+
+
+        function SearchCustomer() {
+            var rownum = 0;
+
+             $.get("../Staffs/GetStaffs?staffroleid=5&zoneId=" + getUrlParameter('zoneId'))
+                 .done(function (data) {
+                     if (data.success == true) {
+                         $("#gridContainer").dxDataGrid({
+                             dataSource: data.data,
+                             showColumnLines: true,
+                             showRowLines: true,
+                             //  rowAlternationEnabled: true,
+                             showBorders: true,
+                             selection: {
+                                 mode: "single"
+                             },
+                             searchPanel: {
+                                 visible: true,
+                                 width: 300,
+                                 placeholder: "ค้นหา..."
+                             },
+                             filterRow: {
+                                 visible: false,
+                                 applyFilter: "auto"
+                             },
+                             export: {
+                                 enabled: true,
+                                 fileName: "File",
+                             },
+
+                             allowColumnReordering: true,
+                             allowColumnResizing: true,
+                             columnAutoWidth: true,
+                             height: 500,
+                             columnFixing: {
+                                 enabled: true
+                             },
+                             columns: [
+                                 {
+                                     dataField: "ID",
+                                     caption: "ลำดับ",
+                                     width: 20 + "%",
+                                     alignment: 'center',
+                                     allowFiltering: false,
+                                     fixed: false,
+                                     cellTemplate: function (container, options) {
+                                         rownum = rownum + 1;
+                                         $("<div>")
+                                             .append(rownum)
+                                             .appendTo(container);
+                                     }
+                                 },
+                                 {
+                                     dataField: "Value",
+                                     caption: "ชื่อ-นามสกุล",
+                                     width: 230 + "%",
+                                     fixed: false,
+                                     fixedPosition: 'left',
+                                 },
+                                 {
+                                     dataField: "ID",
+                                     caption: "ลบ",
+                                     alignment: 'center',
+                                     width: 120 + "%",
+                                     cellTemplate: function (container, options) {
+                                         $("<div>")
+                                             .append("<a onclick='DeleteStaffZone(" + options.key.ID +")' title='ลบ' class='btn btn-info btn-circle btn-sm' ><i class='fa fa-trash'></i></a>")
+                                             .appendTo(container);
+                                     }
+                                 },
+                             ]
+                         });
+                     }
+                 });
+        }
+
+        function DeleteStaffZone(id) {
+
+            var staffzone = {
+
+                StaffID: id,
+                ZoneID: getUrlParameter('zoneId')
+            };
+            $.post("../Setting/GetDeleteStaffZone", staffzone)
+                .done(function (data) {
+                    console.log(data);
+                    if (data.success == true) {
+
+                        alert(data.data);
+                    }
+                });
+            alert(id)
+        }
+    </script>
+}
