--- a/TheGreatGroupModules/Views/Report/OpenCloseAccountReport.cshtml
+++ b/TheGreatGroupModules/Views/Report/OpenCloseAccountReport.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "รายชื่อพนักงานทั้งหมด";
+    ViewBag.Title = "รายงานการเปิดบัญชี";
     ViewBag.MainMenu = "รายงานการเปิดบัญชี";
     Layout = "~/Views/Shared/_LayoutPartial.cshtml";
 }
@@ -21,7 +21,7 @@
 
         <div class="white-box">
 
-            <h3 class="m-b-0 m-t-0"> <i class="fa fa-search"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-line-chart"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
 
             <form class="form-horizontal">
