--- a/TheGreatGroupModules/Views/Staffs/ListStaff.cshtml
+++ b/TheGreatGroupModules/Views/Staffs/ListStaff.cshtml
@@ -20,7 +20,7 @@
 
         <div class="white-box">
             <a onclick="NewZone()" class="btn btn-info pull-right"><i class="fa fa-plus"></i> เพิ่มพนักงาน</a>
-            <h3 class="m-b-0 m-t-0"> <i class="fa fa-search"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa-list-alt"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
 
             <div id="gridListStaffs"></div>
