--- a/TheGreatGroupModules/Views/ManagePayment/Installment.cshtml
+++ b/TheGreatGroupModules/Views/ManagePayment/Installment.cshtml
@@ -21,7 +21,7 @@
 
         <div class="white-box">
 
-            <h3 class="m-b-0 m-t-0"> <i class="fa fa-search"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
+            <h3 class="m-b-0 m-t-0"> <i class="fa fa fa-list-ol"></i> @ViewBag.Title</h3> <small class="text-muted db"></small>
             <hr>
 
             <form class="form-horizontal">
