--- a/TheGreatGroupModules/Views/Customers/Contract.cshtml
+++ b/TheGreatGroupModules/Views/Customers/Contract.cshtml
@@ -86,7 +86,11 @@
                                 <div class="dx-fieldset">
                                     <div class="dx-field">
                                         <div class="dx-field-label"></div>
-                                        <div class="dx-field-value"><button class="btn btn-success btn-sm" onclick="AddProduct()"> <i class="fa fa-plus"></i> เพิ่มสินค้า </button></div>
+                                        <div class="dx-field-value">
+                                            <button class="btn btn-success btn-sm" onclick="AddProduct()"> <i class="fa fa-plus"></i> เพิ่มสินค้า </button>
+
+
+                                        </div>
                                     </div>
                                 </div>
                             </div>
