--- a/TheGreatGroupModules/Views/Customers/PurchaseOrder.cshtml
+++ b/TheGreatGroupModules/Views/Customers/PurchaseOrder.cshtml
@@ -175,7 +175,7 @@
 
 
         });
-
+        product_amount
 
         var theGrid = $('#gridData').dxDataGrid('instance');
         var sumItem = {
