--- a/TheGreatGroupModules/Views/Shared/_LoginPartial.cshtml
+++ b/TheGreatGroupModules/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" sizes="16x16" href="~/Template/plugins/images/favicon.png">
-    <title>Ample Admin Template - The Ultimate Multipurpose admin template</title>
+    <title>บริษัท เดอะเกรทกรุ๊ป จำกัด</title>
     <!-- Bootstrap Core CSS -->
     <link href="../Template/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- animation CSS -->
